<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mohitattri.visheshagyaexpert.activities.UserSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- USERNAME LABEL  -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <!-- USER EMAIL LABEL  -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <!-- USER MOBILE LABEL  -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edUserMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_mobile"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <!-- USER PASSWORD LABEL  -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <!-- ACCEPT TERMS AND CONDITIONS LABEL  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkAcceptTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms_text"
                android:layout_marginRight="5dp"/>
            <TextView
                android:id="@+id/tvCheckTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms_text_check"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>

        <!-- SIGNUP BUTTON LABEL  -->
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_btn"/>

        <!-- SIGNIN LINK LABEL  -->
        <TextView
            android:id="@+id/tvNavigateSignInActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:gravity="center"/>

    </LinearLayout>
</RelativeLayout>
