<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mohitattri.visheshagyaexpert.activities.UserSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- USER EMAIL LABEL  -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <!-- USER MOBILE LABEL  -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edUserMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_mobile"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <!-- RESET PASSWORD BUTTON LABEL  -->
        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_btn"/>


        <!-- SIGNIN USER LINK LABEL  -->
        <TextView
            android:id="@+id/tvNavigateSignInActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:gravity="center"/>


    </LinearLayout>
</RelativeLayout>
